--- a/style.css
+++ b/style.css
@@ -515,8 +515,8 @@ header.active .hamburger{
   transform: translateY(20px);
   animation: fadeInUp 0.7s ease-out forwards;
   text-align: center;
-  background-color: var(--bela);
-  box-shadow: 0 6px 25px 2px rgba(0, 0, 0, 0.05);
+  background-color: var(--neda);
+  box-shadow: 0 6px 25px 2px rgba(100, 100, 100, 0.1);
   border-radius: 12px;
 }
 .about ul li h1 {
