--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 ::-webkit-scrollbar {
   width: 6px;
-  background: transparent;
+  background: var(--pozadina);
 }
 ::-webkit-scrollbar-thumb {
   border-radius: 30px;
