--- a/style.css
+++ b/style.css
@@ -1566,7 +1566,7 @@ form {
   overflow: hidden;
 }
 .portal h2 {
-  margin: 10px 0 5px 0;
+  margin: 5% 0 1% 0;
 }
 .portal #lista {
   margin-bottom: 0px;
@@ -1605,6 +1605,9 @@ form {
 .portal #btn2 {
   margin-bottom: 2%;
 }
+.portal #showCompletedButton{
+  margin-top: 2%;
+}
 .portal #btn3 {
   display: inline-block;
   width: 49%;
@@ -1613,7 +1616,7 @@ form {
 .portal input {
   width: 100%;
   padding: 10px 10px;
-  margin-bottom: 10px;
+  margin-bottom: 2%;
   border: 1px solid rgba(255, 255, 255, 0.2);
   background: #2a2a2a;
   border-radius: 8px;
