--- a/style.css
+++ b/style.css
@@ -1638,6 +1638,10 @@ form {
   overflow-y: auto;
   padding: 0 3px 0 0;
 }
+.portal ul::-webkit-scrollbar, #notepad textarea::-webkit-scrollbar{
+  width: 4px;
+  background-color: transparent;
+}
 .portal ul li {
   background: #2a2a2a;
   border: 1px solid rgba(255, 255, 255, 0.1);
