Dodavanje notifikacije za filtriranje i dodavanje

--- a/style.css
+++ b/style.css
@@ -1837,6 +1837,9 @@ form {
 .notification.error {
   background-color: #ad1f1c;
 }
+.notification.neutral {
+  background-color: #333333;
+}
 .notification.show {
   opacity: 1;
   transform: translateY(0);
